# spot-ros2-gazebo-simulation

./: README.md
install/: local_setup.sh  setup.sh
install/champ/include/champ/: LICENSE  README.md
install/champ/share/champ/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_base/share/champ_base/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_config/share/champ_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/champ_msgs/share/champ_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/spot_bringup/lib/spot_bringup/: thermal_to_rgb
install/spot_bringup/share/spot_bringup/: package.dsv  package.ps1  package.sh
install/spot_description/share/spot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/spot_gazebo/share/spot_gazebo/: local_setup.bash  local_setup.dsv  (+8 more)
install/spot_navigation/share/spot_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/spot_navigation/share/spot_navigation/config/: dlo.rviz  dlo.yaml  localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml  spot_nav.rviz
install/spot_navigation/share/spot_navigation/launch/: AMCL_localization.launch.py  dlo.launch.py  dlo.mapping.launch.py  lidar_localization.launch.py  slam_toolbox_online_async.launch.py
log/: latest_build  latest_list
(+283 files in other folders)
