<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_navigation</name>
  <version>0.0.0</version>
  <description>Config files for using the ROS 2 Nav2 stack</description>
  <maintainer email="ygao@missouri.edu">yg5d6</maintainer>
  <license>MIT</license>

  <depend>slam_toolbox</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
